# zero-fun

./: Anchor.toml  README.MD  TODO.md
programs/game-i/: Cargo.toml
programs/game-i/src/: lib.rs
programs/game-i/src/instructions/: finalize_loss.rs  finalize_win.rs  initialize_game.rs  initialize_global_state.rs  mod.rs  update_global_state.rs  withdraw.rs
programs/game-i/src/state/: admin.rs  constants.rs  error.rs  event.rs  mod.rs
programs/game-i/src/utils/: signature.rs
programs/kill-fun-v0/: Cargo.toml
programs/kill-fun-v0/src/instructions/: finalize_loss.rs  finalize_win.rs  initialize_global_state.rs  withdraw.rs
programs/kill-fun-v0/src/state/: admin.rs  game.rs
programs/kill-fun-v0/tests/: tests.rs
programs/zero-fun/: Cargo.toml
programs/zero-fun/src/: lib.rs
programs/zero-fun/src/instructions/: default_game.rs  finalize_game_as_lost.rs  finalize_game_as_won.rs  finalize_game_as_won_for_player.rs  initialize_game.rs  initialize_global_state.rs  mark_game_as_won.rs  mod.rs  record_action.rs  update_global_state.rs  withdraw.rs
programs/zero-fun/src/state/: admin.rs  constants.rs  error.rs  event.rs  game.rs  mod.rs
programs/zero-fun/src/utils/: mod.rs  signature.rs
programs/zero-fun/tests/: default_game.rs  finalize_game_as_lost.rs  finalize_game_as_won.rs  finalize_game_as_won_for_player.rs  initialize_game.rs  initialize_global_state.rs  mark_game_as_won.rs  record_action.rs  update_global_state.rs  withdraw.rs
programs/zero-fun/tests/common/: utils.rs
programs/zero-fun/tests/resources/: initializer-keypair.json
tests/: game-i.ts
