[package]
name = "kill-fun-v0"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "kill_fun_v0"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]


[dependencies]
anchor-lang = "0.31.1"

[dev-dependencies]
mollusk-svm = "0.6.0"
mollusk-svm-programs-token = "0.6.0"
solana-sdk = "2.1.0"

