[package]
name = "zero-fun"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "zero_fun"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []


[dependencies]
anchor-lang = "0.31.1"

[dev-dependencies]
litesvm = "0.6.1"
solana-sdk = "2.1.0"
spl-token = "8.0.0"

